kubernetes/apps/base/httproutes/api.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-system
      sectionName: https
  hostnames:
    - "${API_HOST}"
  rules:
    - backendRefs:
        - name: yucca-api
          port: 3020
