kubernetes/apps/base/httproutes/web.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-system
      sectionName: https
  hostnames:
    - "${APP_DOMAIN}"
  rules:
    - backendRefs:
        - name: yucca-web
          port: 5173
